apps/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: 8686
